--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,7 +7,7 @@ header img[alt="Logo"] {
 
 
 body {
-  background: #fefefe; /* should change background slightly */
+  background: #ffcccb; /* light red */
 }
 /* === Minimal layout additions === */
 body {
