--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,11 +12,16 @@
 .profile-sidebar {
   width: 250px;
   flex-shrink: 0;
+  position: sticky;
+  top: 2rem;
+  align-self: flex-start;
+  height: fit-content;
 }
 
 .profile-sidebar h1 {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
+  color: #007acc;  /* blue title fix */
 }
 
 .profile-sidebar img {
