--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,12 @@
         </div>
         {% endif %}
       </aside>
+      <nav class="topnav">
+        <a href="/">Main</a>
+        <a href="/research-projects.html">Research Projects</a>
+        <a href="/other-projects.html">Side Projects</a>
+        <a href="/personal.html">Personal Life</a>
+      </nav>
 
       <!-- === RIGHT COLUMN === -->
       <main class="main-content">
