--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
         <!-- === STICKY TOP NAVIGATION === -->
         <nav class="topnav">
           <a href="/">Main</a>
-          <a href="/research-projects.html">Research Projectsssss</a>
+          <a href="/research-projects.html">Research Projects</a>
           <a href="/other-projects.html">Side Projects</a>
           <a href="/personal.html">Personal Life</a>
         </nav>
