--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
           <a href="/">Main</a>
           <a href="/research-projects.html">Research Projects</a>
           <a href="/other-projects.html">Side Projects</a>
-          <a href="/personal.html">Personal Life</a>
+          <a href="/personal.html">Music</a>
         </nav>
 
         {{ content }}
