--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -81,7 +81,7 @@
 .topnav a {
   text-decoration: none;
   font-weight: bold;
-  color: #007acc;
+  color: #e67e22;
   font-size: 1rem;
   white-space: nowrap;
 }
